colour cta update
-on index page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2071,7 +2071,7 @@ color: #fff;
 
 .theme-bg {
   /* background: var(--tp-theme-2); */
-  background: #296bdd;
+  background: var(--tp-theme-1);
 }
 
 .theme-bg-2 {
